Fix alignment

--- a/css/default.css
+++ b/css/default.css
@@ -50,6 +50,7 @@ p, a, h1, h2, h3, h4, h5, h6 {
     text-align: center;
     font-size: 2.3em;
     font-family: selectric-custom;
+    color: #555;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -123,7 +124,7 @@ blockquote {
     font-size: 1.3em;
     font-style: italic;
     line-height: 1.2;
-    margin: 0.25em 0;
+    margin: 0.25em auto;
     padding: 0.35em 40px;
     position: relative;
     width: 100%;
@@ -152,7 +153,7 @@ blockquote:before {
 
 blockquote cite {
     display: block;
-    font-size: 15px;
+    font-size: 16px;
     margin-top: 10px;
     margin-right: 35px;
     text-align: right;
@@ -190,6 +191,7 @@ a:hover
 }
 
 nav {
+    margin-top: 10px;
     margin-right: 20px;
     text-align: right;
 }
